force-app/main/default/objects/Medical_Insurance__c/Medical_Insurance__c.object-meta.xml
<CustomObject>
    <description>Medical insurance provided by a medical facility</description>
    <label>Medical Insurance</label>
    <nameField>
        <label>Medical Insurance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical Insurances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>