force-app/main/default/objects/Medical_Insurance__c/fields/Insurance_amount__c.field-meta.xml
<CustomField>
    <fullName>Insurance_amount__c</fullName>
    <description>An insurance premium is the amount of money an individual or business pays for an insurance policy.</description>
    <label>Insurance amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>