force-app/main/default/objects/Medical_Insurance__c/fields/Insurance_number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_number__c</fullName>
    <description>Insurance identification number.</description>
    <label>Insurance number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>