force-app/main/default/objects/Medical_Insurance__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Insured person.</description>
    <label>Policyholder</label>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Medical Insurances</relationshipLabel>
    <relationshipName>Medical_Insurances</relationshipName>
    <type>Lookup</type>
</CustomField>